<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <LinearLayout
            android:id="@+id/llDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ImageView
                android:id="@+id/imgRecipe"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="@android:dimen/thumbnail_width"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@android:drawable/btn_star"
                android:background="@drawable/border_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtIngredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/ingredients_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/txtStepsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/steps_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/recipe_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/editType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/editImgRecipeData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RelativeLayout
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="@android:dimen/thumbnail_width"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/editImgRecipe"
                    android:layout_width="@android:dimen/thumbnail_width"
                    android:layout_height="@android:dimen/thumbnail_width"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@android:drawable/btn_star"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/border_image_edit" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/ingredients_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/steps_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>